# License-Plate-Detector

./: MobileNetSSD_test.prototxt  README.md  demo_license.py  detect.py  detect_caffe.py  detect_opencv.py  detect_opencv33.py  detect_plate.py  test.py  train.py
Prj-ncnn/: CMakeLists.txt  LPDetector.cpp  LPDetector.h  main.cpp
Prj-ncnn/model/: mnet_plate.param
Prj-ncnn/ncnn/include/ncnn/: layer_type_enum.h  platform.h
data/: config.py  widerface.yaml
layers/functions/: prior_box.py
layers/modules/: multibox_loss.py
models/: retina.py  yolo.py
utils/: box_utils.py  face_datasets.py  general.py  loss.py
weights/: mnet_plate.pth
